Add reason of high complexity to comment

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,8 @@ ignore =
   # ignore line breaks after binary operator (new rule added in 2018)
   W504,
 max-line-length = 200
+# due to complexity not being enforced before, 26 is the minimum for not
+# throwing errors.
 max-complexity = 26
 
 [coverage:run]
