Use setup.cfg to configure flake8, instead of in the ci code (#930)
This makes flake8's configuration more discoverable and easier to
use with other tools (IDE, etc.).

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,5 +7,35 @@ markers =
   linter
   online
 
+[flake8]
+exclude =
+  conf.py,
+  .venv,
+ignore =
+  # ignore presence of unnecessary generators
+  C402,
+  # ignore presence of unnecessary literals
+  C405,
+  # ignore presence of unnecessary comprehensions
+  C407,
+  # ignore presence of unnecessary tuple/list/dict
+  C408,
+  # ignore documentation related warnings
+  D,
+  # ignore presence of unused imports
+  F401,
+  # ignore presence of unused variables
+  F841,
+  # ignore import order related warnings
+  I,
+  # ignore presence of upper case in function names
+  N802,
+  # ignore line breaks after binary operator (new rule added in 2018)
+  W504,
+max-line-length = 200
+# due to complexity not being enforced before, 26 is the minimum for not
+# throwing errors.
+max-complexity = 26
+
 [coverage:run]
 source = rosdep2
